fixed dark mode issue

--- a/style.css
+++ b/style.css
@@ -67,6 +67,4 @@ article {
   height: 100%;
 }
 
-a {
-  color: black;
-}
+
